--- a/offline.html
+++ b/offline.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estádio (Offline)</title>
     <style>
-      p {
-        text-align: center;
+      div {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
