--- a/offline.html
+++ b/offline.html
@@ -17,6 +17,8 @@
   <body>
     <div>
       <p>No internet connection</p>
+      <br />
+      <img src="logo512.png" alt="logo" />
     </div>
   </body>
 </html>
