search install bug

--- a/public/offline.html
+++ b/public/offline.html
@@ -16,7 +16,8 @@
   </head>
   <body>
     <div>
-      <p>No internet connection</p>
+      <p>No internet</p>
+      <p>connection</p>
       <br />
       <img src="logo512.png" alt="logo" />
     </div>
