--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
@@ -48,6 +48,6 @@
             .catch((err) => console.warn("Error: ", err));
         });
       }
-    </script>
+    </script> -->
   </body>
 </html>
