search install bug

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             })
             .catch((err) => console.warn("Error: ", err));
 
-          registration.update();
+          console.log("reg: ", registration);
         });
       }
     </script>
