search install bug

--- a/public/index.html
+++ b/public/index.html
@@ -40,18 +40,15 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type="text/javascript">
-      let registration;
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
             .register("%PUBLIC_URL%/serviceWorker.js")
             .then((reg) => {
-              registration = reg;
+              reg.update();
               console.log("Success: ", reg.scope);
             })
             .catch((err) => console.warn("Error: ", err));
-
-          console.log("reg: ", registration);
         });
       }
     </script>
