--- a/public/index.html
+++ b/public/index.html
@@ -45,19 +45,8 @@
           navigator.serviceWorker
             .register("%PUBLIC_URL%/serviceWorker.js")
             .then((reg) => {
-              reg.addEventListener("updatefound", function () {
-                // If updatefound is fired, it means that there's
-                // a new service worker being installed.
-                var installingWorker = registration.installing;
-                console.log(
-                  "A new service worker is being installed:",
-                  installingWorker
-                );
-
-                // You can listen for changes to the installing service worker's
-                // state via installingWorker.onstatechange
-              });
-              console.log("Success: ", reg.scope);
+              reg.update();
+              console.log("Success: ", reg);
             })
             .catch((err) => console.warn("Error: ", err));
         });
