--- a/offline.html
+++ b/offline.html
@@ -19,7 +19,7 @@
       <p>No internet</p>
       <p>connection</p>
       <br />
-      <img src="https://hv90.github.io/offline-first/logo512.png" alt="logo" />
+      <img src="logo512.png" alt="logo" />
     </div>
   </body>
 </html>
