--- a/offline_test.html
+++ b/offline_test.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html> <html lang=en><meta charset=utf-8>
+<!DOCTYPE html> <html lang=en><!--
+ Page saved with SingleFile 
+ url: https://hv90.github.io/offline-first/ 
+ saved date: Sat Aug 14 2021 19:19:38 GMT-0300 (Brasilia Standard Time)
+--><meta charset=utf-8>
 <meta http-equiv=X-UA-Compatible content="IE=edge">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <title>Estádio (Offline)</title>
-<style>div{display:flex;height:100vh;justify-content:center;align-items:center}.infobar {display: none;}</style>
-<link type=image/x-icon rel="shortcut icon" href="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="><link rel=canonical href=https://hv90.github.io/offline-first/><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:;"></head>
+<style>div{display:flex;height:100vh;justify-content:center;align-items:center}</style>
+<link rel=icon href="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="><link rel=canonical href=https://hv90.github.io/offline-first/><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:;"></head>
  <body>
  <div>
  <p>No internet</p>
