search install bug

--- a/public/offline.html
+++ b/public/offline.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://hv90.github.io/offline-first/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estádio (Offline)</title>
@@ -24,7 +24,7 @@
       <p>No internet</p>
       <p>connection</p>
       <br />
-      <img src="logo512.png" alt="logo" />
+      <img src="https://hv90.github.io/offline-first/logo512.png" alt="logo" />
     </div>
   </body>
 </html>
