search install bug

--- a/public/offline2.html
+++ b/public/offline2.html
@@ -1,9 +1,5 @@
 <html lang="en">
-  <!--
- Page saved with SingleFile 
- url: https://hv90.github.io/offline-first/ 
- saved date: Sat Aug 14 2021 20:05:23 GMT-0300 (Brasilia Standard Time)
---><head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,11 +35,5 @@
         alt="logo"
       />
     </div>
-    <script>
-      //host is the element that holds the shadow root:
-      var style = document.createElement("style");
-      style.innerHTML = ".infobar { display:none; }";
-      host.shadowRoot.appendChild(style);
-    </script>
   </body>
 </html>
